--- a/package.json
+++ b/package.json
@@ -42,7 +42,12 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.11.0",
     "husky": "^9.1.6",
-    "prettier": "3.3.3"
+    "prettier": "3.3.3",
+    "typescript-eslint": "^8.10.0"
   }
 }
