--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
     "typescript-eslint": "^8.10.0"
   }
